## constants.py

class Constants:
    """
    Constants class contains configuration variables that are shared across the project.
    """
    BOARD_SIZE = 4  # Defines the size of the game board, 4x4 for standard 2048 game
    INITIAL_TILES = 2  # The number of initial tiles on the board when the game starts
